# AICT2

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-05-aict2-draw-confirmation.md  2026-04-11-aict2-aligned-wait-confirmation.md  2026-04-11-aict2-weak-htf-conflict-override.md
docs/superpowers/specs/: 2026-04-03-aict2-backtest-engine-design.md  2026-04-03-aict2-confirmation-tuning-design.md  2026-04-03-aict2-scalp-planner-design.md
src/aict2/analysis/: analysis_service.py  gap_levels.py  mark_douglas.py  market_frame.py  market_map.py  opening_levels.py  (+8 more)
tests/: test_analysis_backbone.py  test_analysis_service.py  test_backtest_cli.py  test_backtest_engine.py  test_backtest_in_memory.py  test_backtest_loader.py  test_bot_integration.py  test_bot_router.py  test_bot_runner.py  test_chart_bundle.py  test_chart_intake_and_memory.py  test_command_execution.py  test_csv_driven_analysis.py  test_discord_adapter.py  test_discord_client.py  test_gap_levels.py  test_historical_acceptance.py  test_macro_client.py  test_macro_dashboard.py  test_macro_live_cycle.py  test_macro_main.py  test_macro_market_news.py  test_macro_memory.py  test_macro_output.py  test_macro_publisher.py  test_macro_scheduler.py  test_macro_vix_source.py  test_main_startup.py  test_market_structure.py  test_opening_levels.py  test_output_layer.py  test_phase1_scaffold.py  test_real_session_regressions.py  test_reporting.py  test_runtime.py  test_scoredata.py  test_session_levels.py  test_setup_engine.py  test_store_migrations.py  test_trade_planning.py
(+35 files in other folders)
